--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "immer": "^10.1.1",
-    "jempl": "^0.0.7",
+    "jempl": "^0.1.0-rc1",
     "js-yaml": "^4.1.0",
     "puty": "^0.0.4-rc2"
   }
