--- a/vt/specs/animation/in.yaml
+++ b/vt/specs/animation/in.yaml
@@ -15,8 +15,8 @@ presets:
         systemActions:
           nextLine: {}
 
-resources:
-  backgrounds:
+assets:
+  images:
     alkejf3la:
       fileId: lakjf3lka
     8a3lkja:
@@ -56,7 +56,7 @@ story:
             - id: line1
               presentation:
                 background:
-                  backgroundId: alkejf3la
+                  imageId: alkejf3la
                   animations:
                     in: 3lkj289
             - id: line2
