--- a/vt/specs/background/backgroundId.yaml
+++ b/vt/specs/background/backgroundId.yaml
@@ -14,8 +14,8 @@ presets:
         systemActions:
           nextLine: {}
 
-resources:
-  backgrounds:
+assets:
+  images:
     alkejf3la:
       fileId: lakjf3lka
     8a3lkja:
@@ -37,12 +37,12 @@ story:
             - id: line1
               presentation:
                 background:
-                  backgroundId: alkejf3la
+                  imageId: alkejf3la
             - id: line2
               presentation:
                 background:
-                  backgroundId: 8a3lkja
+                  imageId: 8a3lkja
             - id: line3
               presentation:
                 background:
-                  backgroundId: 3ljdasfjlk32
+                  imageId: 3ljdasfjlk32
