--- a/vt/specs/basic/sample.yaml
+++ b/vt/specs/basic/sample.yaml
@@ -17,8 +17,8 @@ presets:
         systemActions:
           nextLine: {}
 
-resources:
-  backgrounds:
+assets:
+  images:
     alkejf3la:
       fileId: lakjf3lka
     8a3lkja:
@@ -40,13 +40,13 @@ story:
             - id: line1
               presentation:
                 background:
-                  backgroundId: alkejf3la
+                  imageId: alkejf3la
             - id: line2
               presentation:
                 background:
-                  backgroundId: 8a3lkja
+                  imageId: 8a3lkja
             - id: line3
               presentation:
                 background:
-                  backgroundId: 3ljdasfjlk32
+                  imageId: 3ljdasfjlk32
 
