--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "route-engine-js",
-  "version": "0.0.1",
+  "version": "0.0.2-rc1",
   "type": "module",
   "main": "dist/RouteEngine.js",
   "exports": {
