rename screes into layouts

--- a/rettangoli.config.yaml
+++ b/rettangoli.config.yaml
@@ -34,5 +34,5 @@ vt:
           files: "animation"
         - title: "Complete"
           files: "complete"
-        - title: "Screen"
-          files: "screen"
+        - title: "Layout"
+          files: "layout"
