--- a/vt/specs/screen/basic.yaml
+++ b/vt/specs/screen/basic.yaml
@@ -16,7 +16,7 @@ presets:
           nextLine: {}
 
 ui:
-  screens:
+  layouts:
     j3i8dk32:
       name: Title Screen
       elements:
@@ -69,6 +69,6 @@ story:
           lines:
             - id: line1
               presentation:
-                screen:
+                layout:
                   id: 3k3k38
-                  screenId: j3i8dk32
+                  layoutId: j3i8dk32
